--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+<div>
 <div class="card bg-dark text-white" >
   <div class="crop-height flip">
      <img class="card-img scale flip" style="filter: brightness(60%) grayscale(100%)" src='assets/travis4.jpg' alt="Card image">
@@ -154,4 +154,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
