--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
          Find Lyrics and Save Them. Clean and Easy.</p> <br><br><br><br><br><br><br>
 
          <i class="fab fa-spotify"></i> &nbsp; 
-         <span class="text-white">Powered by the Spotify API</span>
+         <span class="d-none d-lg-block text-white">Powered by the Spotify API</span>
      <!-- <p class="card-text">ASTROWORLD</p> -->
    </div>
  </div>
