--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,10 @@
      <p class="card-text">
          Find Lyrics and Save Them. Clean and Easy.</p> <br><br><br><br><br><br><br>
 
+         <span class="d-none d-lg-block">
          <i class="fab fa-spotify"></i> &nbsp; 
-         <span class="d-none d-lg-block text-white">Powered by the Spotify API</span>
+         <span class=" text-white">Powered by the Spotify API</span>
+        </span>
      <!-- <p class="card-text">ASTROWORLD</p> -->
    </div>
  </div>
