--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,21 +20,36 @@
 </div>
 
 <div class="flex-wrapper">
-    <div class="container">
-        <br>
-        <div class="row">
-            <!--d-none d-lg-block-->
-            <div [hidden]="!showhome" class=" col-9"><div class=" "><app-home></app-home></div></div>
-            <div [hidden]="!showlyrics" class="col-9"><app-song></app-song></div>
-            <div [hidden]="!savedbar" class=" col-3"><app-savedlyricsbar></app-savedlyricsbar></div>
-
-            <!-- <div [hidden]="!showhome" class=" col-12"> <div class=" d-lg-none"> <app-home></app-home></div></div> -->
-            <!-- <div [hidden]="!showlyrics" class=" d-lg-none col-12"><app-song></app-song></div> -->
-            <div [hidden]="!showsavedlyrics" class="col-12"><app-savedlyricspage></app-savedlyricspage></div>
+    <!-- <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="btn btn-info" onclick="closeNav()">Close &times;</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+      </div> -->
+      
+      <!-- Use any element to open the sidenav -->
+      <!-- <button class="btn-primary" onclick="openNav()">open</button> -->
+      
+      <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+      <div id="main">
+        <div class="container">
+            <br>
+            <div class="row">
+                <!--d-none d-lg-block-->
+                <div [hidden]="!showhome" class=" col-9"><div class=" "><app-home></app-home></div></div>
+                <div [hidden]="!showlyrics" class="col-9"><app-song></app-song></div>
+                <div [hidden]="!savedbar" class=" col-3"><app-savedlyricsbar></app-savedlyricsbar></div>
     
+                <!-- <div [hidden]="!showhome" class=" col-12"> <div class=" d-lg-none"> <app-home></app-home></div></div> -->
+                <!-- <div [hidden]="!showlyrics" class=" d-lg-none col-12"><app-song></app-song></div> -->
+                <div [hidden]="!showsavedlyrics" class="col-12"><app-savedlyricspage></app-savedlyricspage></div>
+        
+            </div>
+        
         </div>
+        <div class="footer">
+            <app-footer></app-footer></div>
+      </div>
     
-    </div>
-    <div class="footer">
-        <app-footer></app-footer></div>
   </div>
